--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -31,6 +31,7 @@
         {{#posts}}
             <tr>
                 <td>{{id}}</td>
+                <!-- title a 태그 추가, 클릭 시 게시글 수정화면으로 이동 -->
                 <td><a href="/posts/update/{{id}}">{{title}}</a></td>
                 <td>{{author}}</td>
                 <td>{{modifiedDate}}</td>
