--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -5,10 +5,13 @@
     <div class="row">
         <div class="col-md-6">
             <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
+            <!--머스태치는 if문이 없어서 최종값을 넘겨줌-->
             {{#userName}}
                 Logged in as: <span id="user">{{userName}}</span>
+                <!--기본 로그아웃 URL-->
                 <a href="/logout" class="btn btn-info active" role="button">Logout</a>
             {{/userName}}
+            <!--userName이 없을 때 로그인 버튼 노출-->
             {{^userName}}
                 <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
                 <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a>
